--- a/src/html/about/companyCenter.html
+++ b/src/html/about/companyCenter.html
@@ -1,37 +1,37 @@
-<section class="companyCenter">
-  <div class="companyCenter__container">
-    <div class="companyCenter__wrapper">
-      <div class="companyCenter__left-img">
+<section class="company-center">
+  <div class="company-center__container">
+    <div class="company-center__wrapper">
+      <div class="company-center__left-img">
         <img src="./images/about/philocophy/aboutCenter/flatLeft.png" alt="flat">
       </div>
-      <div class="companyCenter__content">
-        <div class="companyCenter__content-wrapper">
-          <div class="companyCenter__content-wrap companyCenter__wrap">
-            <h4 class="companyCenter__wrap-title">6</h4>
-            <p class="companyCenter__wrap-text">years expertise</p>
+      <div class="company-center__content">
+        <div class="company-center__content-wrapper">
+          <div class="company-center__content-wrap company-center__wrap">
+            <h4 class="company-center__wrap-title">6</h4>
+            <p class="company-center__wrap-text">years expertise</p>
           </div>
-          <div class="companyCenter__content-wrap companyCenter__wrap">
-            <h4 class="companyCenter__wrap-title">100+</h4>
-            <p class="companyCenter__wrap-text">completed projects</p>
+          <div class="company-center__content-wrap company-center__wrap">
+            <h4 class="company-center__wrap-title">100+</h4>
+            <p class="company-center__wrap-text">completed projects</p>
           </div>
         </div>
-          <div class="companyCenter__content-wrapper">
-            <div class="companyCenter__content-wrap companyCenter__wrap">
-              <h4 class="companyCenter__wrap-title">25+</h4>
-              <p class="companyCenter__wrap-text">companies cooperate</p>
+          <div class="company-center__content-wrapper">
+            <div class="company-center__content-wrap company-center__wrap">
+              <h4 class="company-center__wrap-title">25+</h4>
+              <p class="company-center__wrap-text">companies cooperate</p>
             </div>
-            <div class="companyCenter__content-wrap companyCenter__wrap">
-              <h4 class="companyCenter__wrap-title">2014</h4>
-              <p class="companyCenter__wrap-text">year of market entry</p>
+            <div class="company-center__content-wrap company-center__wrap">
+              <h4 class="company-center__wrap-title">2014</h4>
+              <p class="company-center__wrap-text">year of market entry</p>
             </div>
           </div>
-        <div class="companyCenter__bottom-wrapper">
-          <p class="companyCenter__content-text">
+        <div class="company-center__bottom-wrapper">
+          <p class="company-center__content-text">
             The basic philosophy of our studio is to create individual,
             aesthetically stunning solutions for our customers by lightning-fast
             development of projects employing unique styles and architecture.
           </p>
-          <div class="companyCenter__right-img">
+          <div class="company-center__right-img">
             <img src="./images/about/philocophy/aboutCenter/flatRight.png" alt="flat">
           </div>
         </div>
