--- a/src/html/about/companyTop.html
+++ b/src/html/about/companyTop.html
@@ -1,9 +1,9 @@
-<section class="companyTop">
-  <div class="companyTop__container">
-    <div class="companyTop__wrapper">
-      <div class="companyTop__left">
-        <h2 class="companyTop__left-title">Company Philosophy</h2>
-        <p class="companyTop__left-text">
+<section class="company-top">
+  <div class="company-top__container">
+    <div class="company-top__wrapper">
+      <div class="company-top__left">
+        <h2 class="company-top__left-title">Company Philosophy</h2>
+        <p class="company-top__left-text">
           The basic philosophy of our studio is to create individual,
           aesthetically stunning solutions for our customers by lightning-fast
           development of projects employing unique styles and architecture.
@@ -17,44 +17,44 @@
             "
           ></span>
         </div>
-        <div class="companyTop__button-prev">
+        <div class="company-top__button-prev">
             <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" viewBox="0 0 6 10" fill="none">
                 <path opacity="0.5" d="M5 9L1 5L5 1" stroke="#828282" stroke-width="0.75"/>
                 </svg>
-            <span class="companyTop__left-number">01</span>
+            <span class="company-top__left-number">01</span>
           </div>
-          <div class="companyTop__button-next">
-            <span class="companyTop__right-number">04</span>
+          <div class="company-top__button-next">
+            <span class="company-top__right-number">04</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="6" height="10" viewBox="0 0 6 10" fill="none">
                 <path opacity="0.5" d="M1 1L5 5L1 9" stroke="#828282" stroke-width="0.75"/>
                 </svg>
           </div>
       </div>
-      <div class="companyTop__right">
+      <div class="company-top__right">
         <!-- Slider main container -->
-        <div class="swiper companyTop__swiper">
+        <div class="swiper company-top__swiper">
           <!-- Additional required wrapper -->
           <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide companyTop__swiper-slide">
+            <div class="swiper-slide company-top__swiper-slide">
               <img
                 src="./images/about/philocophy/aboutTop/flat1.png"
                 alt="flat"
               />
             </div>
-            <div class="swiper-slide companyTop__swiper-slide">
+            <div class="swiper-slide company-top__swiper-slide">
               <img
                 src="./images/about/philocophy/aboutTop/flat2.png"
                 alt="flat"
               />
             </div>
-            <div class="swiper-slide companyTop__swiper-slide">
+            <div class="swiper-slide company-top__swiper-slide">
               <img
                 src="./images/about/philocophy/aboutTop/flat1.png"
                 alt="flat"
               />
             </div>
-            <div class="swiper-slide companyTop__swiper-slide">
+            <div class="swiper-slide company-top__swiper-slide">
               <img
                 src="./images/about/philocophy/aboutTop/flat2.png"
                 alt="flat"
