--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,4 +1,4 @@
-<header class="header mainContact__header">
+<header class="header header__white">
   <div class="header__container">
     <div class="header__left">
       <a href="./index.html" class="header__logo">
@@ -11,49 +11,7 @@
         <p>Menu</p>
       </div>
       <nav class="header__menu menu">
-        <div class="menu__wrapper">
-          <div class="menu__logo">
-            <a href="./index.html" class="header__logo">
-              <img src="./images/logo.png" alt="logo" />
-            </a>
-          </div>
-          <div class="menu__button-right">
-            <div class="header__right">
-              <div class="header__dropdown">
-                <input
-                  type="checkbox"
-                  id="dropdown-toggle"
-                  class="dropdown-toggle"
-                />
-                <label for="dropdown-toggle" class="dropdown-label">
-                  <span class="label-text">En</span>
-                </label>
-                <ul class="dropdown-menu">
-                  <a href="#">
-                    <li>
-                      <span>En</span>
-                    </li>
-                  </a>
-                  <a href="#">
-                    <li>
-                      <span>Ua</span>
-                    </li>
-                  </a>
-                  <a href="#">
-                    <li>
-                      <span>Gr</span>
-                    </li>
-                  </a>
-                </ul>
-              </div>
-              <div class="header__button-wrapper">
-                <a href="#">
-                  <div class="header__button popUp__btn button">Send Request</div>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="header__empty"></div>
         <ul class="menu__list">
           <li class="menu__item menu__item-burger">
             <a href="./index.html" class="menu__link">Home</a>
@@ -72,7 +30,7 @@
           </li>
           <div class="menu__button-wrapper">
             <a href="#">
-              <div class="button popUp__btn">Send Request</div>
+              <div class="button pop-up__btn">Send Request</div>
             </a>
           </div>
         </ul>
@@ -84,53 +42,12 @@
                 <a href="#">In</a>
                 <a href="#">Be</a>
               </div>
-              <div class="hero__dropdown">
-                <input
-                  type="checkbox"
-                  id="dropdown-toggle"
-                  class="hero__dropdown-toggle"
-                />
-                <label for="dropdown-toggle" class="hero__dropdown-label">
-                  <div class="header__content-leftImg">
-                    <img
-                      src="./images/main/hero/maps-and-flags.png"
-                      alt="flag in map"
-                    />
-                  </div>
-                  <span class="hero__label-text">Berlin</span>
-                  <div class="hero__content-rightSvg">
-                    <svg
-                      xmlns="http://www.w3.org/2000/svg"
-                      width="9"
-                      height="6"
-                      viewBox="0 0 9 6"
-                      fill="none"
-                    >
-                      <path
-                        d="M8 1L4.5 4.5L1 1"
-                        stroke="white"
-                        stroke-width="1.4"
-                      />
-                    </svg>
-                  </div>
-                </label>
-                <ul class="hero__dropdown-menu">
-                  <a href="#">
-                    <li>
-                      <span>Berlin</span>
-                    </li>
-                  </a>
-                  <a href="#">
-                    <li>
-                      <span>Ukraine</span>
-                    </li>
-                  </a>
-                  <a href="#">
-                    <li>
-                      <span>London</span>
-                    </li>
-                  </a>
-                </ul>
+              <div class="hero__burger-dropdown">
+                <select>
+                  <option value="option1">Berlin</option>
+                  <option value="option2">Ukraine</option>
+                  <option value="option3">London</option>
+                </select>
               </div>
             </div>
             <div class="menu__content-info">
@@ -167,7 +84,7 @@
       </div>
       <div class="header__button-wrapper">
         <a href="#">
-          <div class="header__button popUp__btn button">Send Request</div>
+          <div class="header__button pop-up__btn button">Send Request</div>
         </a>
       </div>
     </div>
