--- a/src/html/main/hero.html
+++ b/src/html/main/hero.html
@@ -4,56 +4,37 @@
     <!-- Additional required wrapper -->
     <div class="swiper-wrapper">
       <!-- Slides -->
-      <div class="swiper-slide hero__slide-left">
+      <div class="swiper-slide">
         <div class="hero__left-img">
           <img src="./images/main/hero/left.png" alt="photo" />
         </div>
       </div>
-      <div class="swiper-slide hero__slide-right">
-        <div class="hero__right-img">
-          <img src="./images/main/hero/right.png" alt="" />
-        </div>
-      </div>
-      <div class="swiper-slide hero__slide-left">
+      <div class="swiper-slide">
         <div class="hero__left-img">
-          <img src="./images/main/hero/left.png" alt="photo" />
+          <img src="./images/main/hero/flat5.png" alt="photo" />
         </div>
       </div>
-      <div class="swiper-slide hero__slide-right">
-        <div class="hero__right-img">
-          <img src="./images/main/hero/right.png" alt="" />
-        </div>
-      </div>
-      <div class="swiper-slide hero__slide-left">
+      <div class="swiper-slide">
         <div class="hero__left-img">
-          <img src="./images/main/hero/left.png" alt="photo" />
+          <img src="./images/main/hero/flat2.png" alt="photo" />
         </div>
       </div>
-      <div class="swiper-slide hero__slide-right">
-        <div class="hero__right-img">
-          <img src="./images/main/hero/right.png" alt="" />
-        </div>
-      </div>
-      <div class="swiper-slide hero__slide-left">
+      <div class="swiper-slide">
         <div class="hero__left-img">
-          <img src="./images/main/hero/left.png" alt="photo" />
+          <img src="./images/main/hero/flat3.png" alt="photo" />
         </div>
       </div>
-      <div class="swiper-slide hero__slide-right">
-        <div class="hero__right-img">
-          <img src="./images/main/hero/right.png" alt="" />
-        </div>
-      </div>
-  </div>
-  <!-- If we need pagination -->
-  <div class="swiper-pagination">
-    <span
-      class="swiper-pagination-progressbar-fill"
-      style="
-        transform: translate3d(0px, 0px, 0px) scaleX(0.25) scaleY(1);
-        transition-duration: 300ms;
-      "
-    ></span>
+    </div>
+    <!-- If we need pagination -->
+    <div class="swiper-pagination">
+      <span
+        class="swiper-pagination-progressbar-fill"
+        style="
+          transform: translate3d(0px, 0px, 0px) scaleX(0.25) scaleY(1);
+          transition-duration: 300ms;
+        "
+      ></span>
+    </div>
   </div>
 
   <div class="hero__button-prev">
@@ -80,7 +61,6 @@
       <path d="M1 1L5 5L1 9" stroke="white" stroke-width="0.75" />
     </svg>
   </div>
-</div>
   <div class="hero__content">
     <div class="hero__container">
       <div class="hero__content-top">
@@ -133,11 +113,7 @@
               viewBox="0 0 9 6"
               fill="none"
             >
-              <path
-                d="M8 1L4.5 4.5L1 1"
-                stroke="white"
-                stroke-width="1.4"
-              />
+              <path d="M8 1L4.5 4.5L1 1" stroke="white" stroke-width="1.4" />
             </svg>
           </div>
         </label>
