--- a/src/html/main/projects.html
+++ b/src/html/main/projects.html
@@ -24,22 +24,22 @@
       </div>
       <div class="projects__card-wrapper">
         <div class="projects__card">
-          <div class="projects__card-contentTop card__contentTop">
-            <div class="card__contentTop-info">
+          <div class="projects__card-content-top card__content-top">
+            <div class="card__content-top-info">
               <p>Lodz</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>16.10.2018</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>80 sq.m</p>
             </div>
           </div>
-          <div class="projects__card-contentBottom card__contentBottom">
-            <div class="card__contentBottom-text">
+          <div class="projects__card-content-bottom card__content-bottom">
+            <div class="card__content-bottom-text">
               <p>Eyewear store interior</p>
             </div>
-            <div class="card__contentBottom-button">
+            <div class="card__content-bottom-button">
               <a href="#">Discover more</a>
             </div>
           </div>
@@ -50,22 +50,22 @@
           </div>
         </div>
         <div class="projects__card projects__card-top">
-          <div class="projects__card-contentTop card__contentTop">
-            <div class="card__contentTop-info">
+          <div class="projects__card-content-top card__content-top">
+            <div class="card__content-top-info">
               <p>Lodz</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>16.10.2018</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>80 sq.m</p>
             </div>
           </div>
-          <div class="projects__card-contentBottom card__contentBottom">
+          <div class="projects__card-content-bottom card__content-bottom">
             <div class="card__contentBottom-text">
               <p>Eyewear store interior</p>
             </div>
-            <div class="card__contentBottom-button">
+            <div class="card__content-bottom-button">
               <a href="#">Discover more</a>
             </div>
           </div>
@@ -76,22 +76,22 @@
           </div>
         </div>
         <div class="projects__card">
-          <div class="projects__card-contentTop card__contentTop">
-            <div class="card__contentTop-info">
+          <div class="projects__card-content-top card__content-top">
+            <div class="card__content-top-info">
               <p>Lodz</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>16.10.2018</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>80 sq.m</p>
             </div>
           </div>
-          <div class="projects__card-contentBottom card__contentBottom">
-            <div class="card__contentBottom-text">
+          <div class="projects__card-content-bottom card__content-bottom">
+            <div class="card__content-bottom-text">
               <p>Minimalist style home</p>
             </div>
-            <div class="card__contentBottom-button">
+            <div class="card__content-bottom-button">
               <a href="#">Discover more</a>
             </div>
           </div>
@@ -102,22 +102,22 @@
           </div>
         </div>
         <div class="projects__card projects__card-desktop projects__card-one">
-          <div class="projects__card-contentTop card__contentTop">
-            <div class="card__contentTop-info">
+          <div class="projects__card-content-top card__content-top">
+            <div class="card__content-top-info">
               <p>Lodz</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>16.10.2018</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>80 sq.m</p>
             </div>
           </div>
-          <div class="projects__card-contentCenter card__contentBottom">
-            <div class="card__contentCenter-text">
+          <div class="projects__card-content-center card__content-bottom">
+            <div class="card__content-center-text">
               <p>Residence by the lighthouse</p>
             </div>
-            <div class="card__contentCenter-button">
+            <div class="card__content-center-button">
               <a href="#">Discover more</a>
             </div>
           </div>
@@ -128,22 +128,22 @@
           </div>
         </div>
         <div class="projects__card">
-          <div class="projects__card-contentTop card__contentTop">
-            <div class="card__contentTop-info">
+          <div class="projects__card-content-top card__content-top">
+            <div class="card__content-top-info">
               <p>Lodz</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>16.10.2018</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>80 sq.m</p>
             </div>
           </div>
-          <div class="projects__card-contentBottom card__contentBottom">
-            <div class="card__contentBottom-text">
+          <div class="projects__card-content-bottom card__content-bottom">
+            <div class="card__content-bottom-text">
               <p>Eyewear store interior</p>
             </div>
-            <div class="card__contentBottom-button">
+            <div class="card__content-bottom-button">
               <a href="#">Discover more</a>
             </div>
           </div>
@@ -153,23 +153,23 @@
             </a>
           </div>
         </div>
-        <div class="projects__card projects__card-bottomSecond">
-          <div class="projects__card-contentTop card__contentTop">
-            <div class="card__contentTop-info">
+        <div class="projects__card projects__card-bottom-second">
+          <div class="projects__card-content-top card__content-top">
+            <div class="card__content-top-info">
               <p>Lodz</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>16.10.2018</p>
             </div>
-            <div class="card__contentTop-info">
+            <div class="card__content-top-info">
               <p>80 sq.m</p>
             </div>
           </div>
-          <div class="projects__card-contentBottom card__contentBottom">
-            <div class="card__contentBottom-text">
+          <div class="projects__card-content-bottom card__content-bottom">
+            <div class="card__content-bottom-text">
               <p>House on a Hillside</p>
             </div>
-            <div class="card__contentBottom-button">
+            <div class="card__content-bottom-button">
               <a href="#">Discover more</a>
             </div>
           </div>
@@ -179,12 +179,12 @@
             </a>
           </div>
         </div>
-        <div class="projects__card projects__card-bottomRight">
+        <div class="projects__card projects__card-bottom-right">
           <div class="projects__card-text">
             <p>See more 60 projects</p>
           </div>
           <div class="projects__card-inner">
-            <div class="projects__card-bottomImg">
+            <div class="projects__card-bottom-img">
               <a href="#">
                 <img
                   src="./images/main/projects/project5.png"
