--- a/src/html/main/work.html
+++ b/src/html/main/work.html
@@ -2,7 +2,7 @@
   <div class="work__container">
     <div class="work__info">
       <a href="#" class="work__info-link"> @lorem.ipsum </a>
-      <a href="#" class="work__info-linkSecond"> @hilight.design </a>
+      <a href="#" class="work__info-link-second"> @hilight.design </a>
       <p class="work__info-text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
         ullamcorper eu mauris vitae posuere.
