--- a/src/html/oneProject/oneDonec.html
+++ b/src/html/oneProject/oneDonec.html
@@ -1,11 +1,11 @@
-<section class="oneDonec">
-  <div class="oneDonec__container">
-    <div class="oneDonec__content-container">
-      <h3 class="oneDonec__title">
+<section class="one-donec">
+  <div class="one-donec__container">
+    <div class="one-donec__content-container">
+      <h3 class="one-donec__title">
         Donec et ipsum nec quam posuere maximus eu in erat. Duis laoreet finibus
         consectetur.
       </h3>
-      <p class="oneDonec__text">
+      <p class="one-donec__text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vel
         gravida urna. Donec blandit sapien eu diam ullamcorper euismod. Nam
         tempus pellentesque ligula ut aliquam. Donec et ipsum nec quam posuere
@@ -17,31 +17,31 @@
         laoreet. In lacus augue, malesuada id elit sit amet, varius imperdiet
         ex. Nullam blandit lobortis posuere:
       </p>
-      <a href="#" class="oneDonec__btn"> Discover more </a>
+      <a href="#" class="one-donec__btn"> Discover more </a>
     </div>
 
-    <div class="oneDonec__flat-top">
+    <div class="one-donec__flat-top">
       <a href="#">
         <img src="./images/oneProject/oneDonec/flat1.png" alt="flat" />
       </a>
     </div>
-    <div class="oneDonec__flat-center-wrapper">
-      <div class="oneDonec__flat-center">
+    <div class="one-donec__flat-center-wrapper">
+      <div class="one-donec__flat-center">
         <a href="#">
           <img src="./images/oneProject/oneDonec/flat2.png" alt="flat" />
         </a>
       </div>
-      <div class="oneDonec__flat-center">
+      <div class="one-donec__flat-center">
         <a href="#">
           <img src="./images/oneProject/oneDonec/flat3.png" alt="flat" />
         </a>
       </div>
     </div>
-    <div class="oneDonec__flat-bottom">
+    <div class="one-donec__flat-bottom">
       <a href="#">
         <img src="./images/oneProject/oneDonec/flat4.png" alt="flat" />
       </a>
     </div>
-    <a href="#" class="oneDonec__bottom-button button"> View more photo </a>
+    <a href="#" class="one-donec__bottom-button button"> View more photo </a>
   </div>
 </section>
