--- a/src/html/popUp/popUp.html
+++ b/src/html/popUp/popUp.html
@@ -1,5 +1,5 @@
-<div class="popUp__container">
-  <span class="popUp__close"
+<div class="pop-up__container">
+  <span class="pop-up__close"
     ><svg
       xmlns="http://www.w3.org/2000/svg"
       width="16"
@@ -20,59 +20,59 @@
         fill="white"
       /></svg
   ></span>
-  <div class="popUp-content__container">
-    <div class="popUp-content__wrapper">
+  <div class="pop-up-content__container">
+    <div class="pop-up-content__wrapper">
       <form action="#" id="popUp-form">
-        <div class="popUp-content__top">
-          <h1 class="popUp-content__top-title-desktop">Calculate the cost of work</h1>
-          <h1 class="popUp-content__top-title-mobile">Make request</h1>
-          <div class="popUp-content__top-wrapper">
-            <div class="popUp-content__top-wrap">
+        <div class="pop-up-content__top">
+          <h1 class="pop-up-content__top-title-desktop">Calculate the cost of work</h1>
+          <h1 class="pop-up-content__top-title-mobile">Make request</h1>
+          <div class="pop-up-content__top-wrapper">
+            <div class="pop-up-content__top-wrap">
               <input
                 type="text"
                 id="firstName"
                 name="firstName"
                 placeholder="Name"
               />
-              <p id="validate-name-text" class="popUp__validate-text"></p>
+              <p id="validate-name-text" class="pop-up__validate-text"></p>
             </div>
-            <div class="popUp-content__top-wrap">
+            <div class="pop-up-content__top-wrap">
               <input
                 type="text"
                 id="lastName"
                 name="lastName"
                 placeholder="Last name"
               />
-              <p id="validate-lastName-text" class="popUp__validate-text"></p>
+              <p id="validate-lastName-text" class="pop-up__validate-text"></p>
             </div>
-            <div class="popUp-content__top-wrap">
+            <div class="pop-up-content__top-wrap">
               <input
                 type="tel"
                 id="phoneNumber"
                 name="phoneNumber"
                 placeholder="Phone"
               />
-              <p id="validate-phone-text" class="popUp__validate-text"></p>
+              <p id="validate-phone-text" class="pop-up__validate-text"></p>
             </div>
-            <div class="popUp-content__top-wrap">
+            <div class="pop-up-content__top-wrap">
               <input
                 type="text"
                 id="city"
                 name="city"
                 placeholder="Your city"
               />
-              <p id="validate-city-text" class="popUp__validate-text"></p>
+              <p id="validate-city-text" class="pop-up__validate-text"></p>
             </div>
-            <div class="popUp-content__top-wrap">
+            <div class="pop-up-content__top-wrap">
               <input
                 type="email"
                 id="email"
                 name="email"
                 placeholder="Email"
               />
-              <p id="validate-email-text" class="popUp__validate-text"></p>
+              <p id="validate-email-text" class="pop-up__validate-text"></p>
             </div>
-            <div class="popUp-content__top-wrap">
+            <div class="pop-up-content__top-wrap">
               <div class="hero__dropdown">
                 <input
                   type="checkbox"
@@ -81,10 +81,10 @@
                 />
                 <label
                   for="dropdown-toggle"
-                  class="hero__dropdown-label popUp-content__dropdown-label"
+                  class="hero__dropdown-label pop-up-content__dropdown-label"
                 >
                   <span class="hero__label-text">Property type</span>
-                  <div class="hero__content-rightSvg popUp-content__rightSvg">
+                  <div class="hero__content-rightSvg pop-up-content__rightSvg">
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="9"
@@ -120,24 +120,24 @@
               </div>
             </div>
           </div>
-          <div class="popUp-content__bottom-wrap">
+          <div class="pop-up-content__bottom-wrap">
             <input
               type="text"
               id="comment"
               name="comment"
               placeholder="Your comment"
             />
-            <p id="validate-comment-text" class="popUp__validate-text"></p>
+            <p id="validate-comment-text" class="pop-up__validate-text"></p>
           </div>
         </div>
-        <div class="popUp-content__bottom">
-          <div class="popUp-content__bottom-wrapper">
-            <p class="popUp-content__bottom-text">Area (m2)</p>
-            <div class="popUp-content__bottom-lineas">
-              <div class="popUp-content__bottom-linea popUp__linea">
-                <p class="popUp__linea-num">to 50</p>
+        <div class="pop-up-content__bottom">
+          <div class="pop-up-content__bottom-wrapper">
+            <p class="pop-up-content__bottom-text">Area (m2)</p>
+            <div class="pop-up-content__bottom-lineas">
+              <div class="pop-up-content__bottom-linea pop-up__linea">
+                <p class="pop-up__linea-num">to 50</p>
                 <input type="radio" name="num" id="num50" />
-                <span class="popUp__radio-button">
+                <span class="pop-up__radio-button">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="18"
@@ -195,10 +195,10 @@
                   </svg>
                 </span>
               </div>
-              <div class="popUp-content__bottom-linea popUp__linea">
-                <p class="popUp__linea-num">50-150</p>
+              <div class="pop-up-content__bottom-linea pop-up__linea">
+                <p class="pop-up__linea-num">50-150</p>
                 <input type="radio" name="num" id="num50-150" />
-                <span class="popUp__radio-button">
+                <span class="pop-up__radio-button">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="18"
@@ -256,10 +256,10 @@
                   </svg>
                 </span>
               </div>
-              <div class="popUp-content__bottom-linea popUp__linea">
-                <p class="popUp__linea-num">150-250</p>
+              <div class="pop-up-content__bottom-linea pop-up__linea">
+                <p class="pop-up__linea-num">150-250</p>
                 <input type="radio" name="num" id="num150-250" />
-                <span class="popUp__radio-button">
+                <span class="pop-up__radio-button">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="18"
@@ -317,10 +317,10 @@
                   </svg>
                 </span>
               </div>
-              <div class="popUp-content__bottom-linea popUp__linea">
-                <p class="popUp__linea-num">250-400</p>
+              <div class="pop-up-content__bottom-linea pop-up__linea">
+                <p class="pop-up__linea-num">250-400</p>
                 <input type="radio" name="num" id="num250-400" />
-                <span class="popUp__radio-button popUp__linea-none">
+                <span class="pop-up__radio-button pop-up__linea-none">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="18"
@@ -378,10 +378,10 @@
                   </svg>
                 </span>
               </div>
-              <div class="popUp-content__bottom-linea popUp__linea">
-                <p class="popUp__linea-num">400-600</p>
+              <div class="pop-up-content__bottom-linea pop-up__linea">
+                <p class="pop-up__linea-num">400-600</p>
                 <input type="radio" name="num" id="num400-600" />
-                <span class="popUp__radio-button">
+                <span class="pop-up__radio-button">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="18"
@@ -439,10 +439,10 @@
                   </svg>
                 </span>
               </div>
-              <div class="popUp-content__bottom-linea popUp__linea">
-                <p class="popUp__linea-num">600-800</p>
+              <div class="pop-up-content__bottom-linea pop-up__linea">
+                <p class="pop-up__linea-num">600-800</p>
                 <input type="radio" name="num" id="num600-800" />
-                <span class="popUp__radio-button">
+                <span class="pop-up__radio-button">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="18"
@@ -500,10 +500,10 @@
                   </svg>
                 </span>
               </div>
-              <div class="popUp-content__bottom-linea popUp__linea">
-                <p class="popUp__linea-num">800-1000</p>
+              <div class="pop-up-content__bottom-linea pop-up__linea">
+                <p class="pop-up__linea-num">800-1000</p>
                 <input type="radio" name="num" id="num800-1000" />
-                <span class="popUp__radio-button">
+                <span class="pop-up__radio-button">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="18"
@@ -561,10 +561,10 @@
                   </svg>
                 </span>
               </div>
-              <div class="popUp-content__bottom-linea_right popUp__linea">
-                <p class="popUp__linea-num">1000+</p>
+              <div class="pop-up-content__bottom-linea_right pop-up__linea">
+                <p class="pop-up__linea-num">1000+</p>
                 <input type="radio" name="num" id="num1000+" />
-                <span class="popUp__radio-button popUp__radio-buttonLast">
+                <span class="pop-up__radio-button pop-up__radio-button-last">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="18"
@@ -623,10 +623,10 @@
                 </span>
               </div>
             </div>
-            <div class="popUp-content__bottom-buttons popUp-content__buttons">
-              <div class="popUp-content__buttons-left">
+            <div class="pop-up-content__bottom-buttons pop-up-content__buttons">
+              <div class="pop-up-content__buttons-left">
                 <input type="file" id="fileInput" style="display: none;">
-                <div class="popUp-content__button-left">
+                <div class="pop-up-content__button-left">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="39"
@@ -646,18 +646,18 @@
                     <rect x="19" y="15" width="1" height="9" fill="#3A3E4B" />
                   </svg>
                 </div>
-                <div class="popUp-content__button-info">
-                  <p class="popUp-content__button-nameFile">Attach your file</p>
-                  <p class="popUp-content__button-sizeFile">
+                <div class="pop-up-content__button-info">
+                  <p class="pop-up-content__button-name-file">Attach your file</p>
+                  <p class="pop-up-content__button-size-file">
                     File size not more than 10 MB
                   </p>
                 </div>
               </div>
-              <div class="popUp-content__buttons-right">
-                <button class="button popUp__button" type="submit">Send Request</button>
+              <div class="pop-up-content__buttons-right">
+                <button class="button pop-up__button" type="submit">Send Request</button>
               </div>
             </div>
-            <p class="popUp-content__text-bottom">
+            <p class="pop-up-content__text-bottom">
               It is a long established fact that a reader will be distracted by
               the readable content of a page when looking at its layout. The
               point of using Lorem Ipsum is that it has a more-or-less normal
