--- a/src/html/about/companyBottom.html
+++ b/src/html/about/companyBottom.html
@@ -1,20 +1,20 @@
-<section class="companyBottom">
-  <div class="companyBottom__container">
-    <div class="companyBottom__wrapper">
-      <div class="companyBottom__left">
-        <h4 class="companyBottom__left-userName">Roman Viktorovich</h4>
-        <h5 class="companyBottom__left-userWork">Founder and CEO of Hilight</h5>
-        <div class="companyBottom__left-wrapper">
-          <p class="companyBottom__left-quotes">
+<section class="company-bottom">
+  <div class="company-bottom__container">
+    <div class="company-bottom__wrapper">
+      <div class="company-bottom__left">
+        <h4 class="company-bottom__left-user-name">Roman Viktorovich</h4>
+        <h5 class="company-bottom__left-user-work">Founder and CEO of Hilight</h5>
+        <div class="company-bottom__left-wrapper">
+          <p class="company-bottom__left-quotes">
             “
           </p>
-          <p class="companyBottom__left-text">
+          <p class="company-bottom__left-text">
             We can also help you create harmony out of seemingly completely
             incompatible elements in the interior or the exterior design.
           </p>
         </div>
 
-        <div class="companyBottom__left-img">
+        <div class="company-bottom__left-img">
           <img
             src="./images/about/philocophy/aboutBottom/flatLeft.png"
             alt="flat"
@@ -22,28 +22,28 @@
         </div>
       </div>
 
-      <div class="companyBottom__right">
-        <div class="companyBottom__right-img">
+      <div class="company-bottom__right">
+        <div class="company-bottom__right-img">
           <img
             src="./images/about/philocophy/aboutBottom/flatRight.png"
             alt="flat"
           />
         </div>
-        <div class="companyBottom__right-wrapper">
-          <div class="companyBottom__right-wrap companyBottom__wrap">
-            <p class="companyBottom__wrap-years">5</p>
-            <p class="companyBottom__wrap-years-info">companies cooperate</p>
+        <div class="company-bottom__right-wrapper">
+          <div class="company-bottom__right-wrap company-bottom__wrap">
+            <p class="company-bottom__wrap-years">5</p>
+            <p class="company-bottom__wrap-years-info">companies cooperate</p>
           </div>
-          <div class="companyBottom__right-wrap companyBottom__wrap">
-            <p class="companyBottom__wrap-years">4</p>
-            <p class="companyBottom__wrap-years-info">year of market entry</p>
+          <div class="company-bottom__right-wrap company-bottom__wrap">
+            <p class="company-bottom__wrap-years">4</p>
+            <p class="company-bottom__wrap-years-info">year of market entry</p>
           </div>
-          <div class="companyBottom__right-wrap companyBottom__wrap">
-            <p class="companyBottom__wrap-years">3</p>
-            <p class="companyBottom__wrap-years-info">companies cooperate</p>
+          <div class="company-bottom__right-wrap company-bottom__wrap">
+            <p class="company-bottom__wrap-years">3</p>
+            <p class="company-bottom__wrap-years-info">companies cooperate</p>
           </div>
         </div>
-        <p class="companyBottom__right-text">
+        <p class="company-bottom__right-text">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat nisl
           sit risus pharetra nisl metus aliquet. Nibh eu posuere sodales sem
           tellus. Vulputate est nisl convallis sed. Fames in dignissim erat
