--- a/src/html/about/companyLorem.html
+++ b/src/html/about/companyLorem.html
@@ -1,13 +1,13 @@
-<section class="companyLorem">
-  <div class="companyLorem__container">
+<section class="company-lorem">
+  <div class="company-lorem__container">
     <div class="work__info">
-      <a href="#" class="work__info-link companyLorem__info-link">
+      <a href="#" class="work__info-link company-lorem__info-link">
         @lorem.ipsum
       </a>
-      <a href="#" class="work__info-linkSecond companyLorem__info-linkSecond">
+      <a href="#" class="work__info-link-second company-lorem__info-link-second">
         @hilight.design
       </a>
-      <p class="work__info-text companyLorem__info-text">
+      <p class="work__info-text company-lorem__info-text">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
         ullamcorper eu mauris vitae posuere.
       </p>
