--- a/src/html/oneNews/ourLatest.html
+++ b/src/html/oneNews/ourLatest.html
@@ -1,55 +1,55 @@
-<section class="ourLatest">
-  <div class="ourLatest__container">
-    <p class="ourLatest__sidebar">
+<section class="our-latest">
+  <div class="our-latest__container">
+    <p class="our-latest__sidebar">
         blog
     </p>
-    <h2 class="ourLatest__title">Our latest news</h2>
+    <h2 class="our-latest__title">Our latest news</h2>
 
     <!-- Slider main container -->
-    <div class="swiper ourLatest__swiper">
+    <div class="swiper our-latest__swiper">
       <!-- Additional required wrapper -->
       <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide">
-            <div class="ourLatest__slide-wrapper">
-                <img src="./images/oneNews/ourLatest/flat1.png" alt="flat" class="ourLatest__swiper-img">
-            <h4 class="ourLatest__swiper-title">
+            <div class="our-latest__slide-wrapper">
+                <img src="./images/oneNews/ourLatest/flat1.png" alt="flat" class="our-latest__swiper-img">
+            <h4 class="our-latest__swiper-title">
                 Antrax IT - Italian factory for the production of radiators
             </h4>
-            <p class="ourLatest__swiper-date">
+            <p class="our-latest__swiper-date">
                 01 January 2019
             </p>
             </div>
         </div>
         <div class="swiper-slide">
-            <div class="ourLatest__slide-wrapper">
-                <img src="./images/oneNews/ourLatest/flat2.png" alt="flat" class="ourLatest__swiper-img">
-            <h4 class="ourLatest__swiper-title">
+            <div class="our-latest__slide-wrapper">
+                <img src="./images/oneNews/ourLatest/flat2.png" alt="flat" class="our-latest__swiper-img">
+            <h4 class="our-latest__swiper-title">
                 Antrax IT - Italian factory for the production of radiators
             </h4>
-            <p class="ourLatest__swiper-date">
+            <p class="our-latest__swiper-date">
                 01 January 2019
             </p>
             </div>
         </div>
         <div class="swiper-slide">
-            <div class="ourLatest__slide-wrapper">
-                <img src="./images/oneNews/ourLatest/flat3.png" alt="flat" class="ourLatest__swiper-img">
-            <h4 class="ourLatest__swiper-title">
+            <div class="our-latest__slide-wrapper">
+                <img src="./images/oneNews/ourLatest/flat3.png" alt="flat" class="our-latest__swiper-img">
+            <h4 class="our-latest__swiper-title">
                 Antrax IT - Italian factory for the production of radiators
             </h4>
-            <p class="ourLatest__swiper-date">
+            <p class="our-latest__swiper-date">
                 01 January 2019
             </p>
             </div>
         </div>
         <div class="swiper-slide">
-            <div class="ourLatest__slide-wrapper">
-                <img src="./images/oneNews/ourLatest/flat4.png" alt="flat" class="ourLatest__swiper-img">
-            <h4 class="ourLatest__swiper-title">
+            <div class="our-latest__slide-wrapper">
+                <img src="./images/oneNews/ourLatest/flat4.png" alt="flat" class="our-latest__swiper-img">
+            <h4 class="our-latest__swiper-title">
                 Antrax IT - Italian factory for the production of radiators
             </h4>
-            <p class="ourLatest__swiper-date">
+            <p class="our-latest__swiper-date">
                 01 January 2019
             </p>
             </div>
@@ -57,7 +57,7 @@
       </div>
     </div>
   </div>
-  <div class="outLatest-footer__container">
+  <div class="our-latest-footer__container">
     <footer class="footer footer__black">
         <div class="footer__wrapper">
           <div class="footer__wrapper-left">
