--- a/src/html/pageContact/mainContact.html
+++ b/src/html/pageContact/mainContact.html
@@ -1,16 +1,16 @@
-<section class="mainContact">
-  <div class="contact__bg mainContact__bg">
+<section class="main-contact">
+  <div class="contact__bg main-contact__bg">
     <img src="./images/main/contact/bg.png" alt="bg" />
   </div>
   <div class="contact__container">
-    <div class="mainContact__wrapper">
+    <div class="main-contact__wrapper">
       @@include('../../components/contacts.html', {})
     </div>
   </div>
-  <div class="mainContact__footer">
+  <div class="main-contact__footer">
     <footer class="footer footer__black">
-      <div class="mainContact__container">
-        <div class="footer__wrapper mainContact__footer-wrapper">
+      <div class="main-contact__container">
+        <div class="footer__wrapper main-contact__footer-wrapper">
           <div class="footer__wrapper-left">
             <p class="footer__wrapper-copyright">
               © Copyright 2018. All rights reserved
