--- a/src/html/errors/404.html
+++ b/src/html/errors/404.html
@@ -1,16 +1,36 @@
 <section class="error">
-    <div class="error__bg"></div>
-    <div class="error__container">
-        <div class="error__wrapper">
-            <h1 class="error__title">
-                Page not found
-            </h1>
-            <p class="error__text">
-                Something went wrong. Page not found
-            </p>
-            <p class="error__bottom-text">
-                go to main
-            </p>
+  <div class="error__bg">
+    <img src="./images/error/bg.png" alt="bg" />
+  </div>
+  <div class="error__container">
+    <div class="error__wrapper">
+      <div class="error__wrapper-left">
+        <div class="error__sidebar">
+          <p>404</p>
         </div>
+      </div>
+      <div class="error__wrapper-right">
+        <h1 class="error__title">Page not found</h1>
+        <p class="error__text">Something went wrong. Page not found</p>
+        <p class="error__bottom-text">go to main</p>
+      </div>
     </div>
+  </div>
 </section>
+<footer class="footer footer__black error__footer">
+  <div class="error-footer__container">
+    <div class="footer__wrapper">
+      <div class="footer__wrapper-left">
+        <p class="footer__wrapper-copyright">
+          © Copyright 2018. All rights reserved
+        </p>
+      </div>
+      <div class="footer__wrapper-right footer__wrapper-black">
+        <p class="footer__wrapper-text">Made with love in</p>
+        <div class="footer__wrapper-logo">
+          <img src="./images/footer/logo.png" alt="logo" class="footer__logo" />
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
